--- a/partials/panels/section-07.twig
+++ b/partials/panels/section-07.twig
@@ -1,6 +1,12 @@
 {% set articleCount = 0 %}
 {% set cardIndex = 0 %}
 
+{% set cardLayoutInfo = '' %}
+{% set articleLayoutInfo = '../_single-article.twig' %}
+{% if cardLayout is defined and cardLayout is not empty and cardLayout == 'version2' %}
+    {% set cardLayoutInfo = 'card__version2' %}
+    {% set articleLayoutInfo = '../_single-article-v2.twig' %}
+{% endif %}
 
 <div class="row" data-section="07">
     <div class="col-12">
@@ -22,10 +28,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="c-cards-container c-cards-container-xs bottom-border">
-                                {{this.render('../_single-article.twig', {
-                                article: articles[articleCount],
-                                position: (articleCount+1),
-                                imageSize: {width: 950, height: 675},
+                            {# imageSize: {width: 950, height: 675},
                                 imageSizes: {
                                     "mobile": {
                                         width: 635, height:450
@@ -33,9 +36,12 @@
                                     "tablet" : {
                                         width: 950, height:675
                                     }
-                                }, 
+                                },  #}
+                                {{this.render(articleLayoutInfo, {
+                                article: articles[articleCount],
+                                position: (articleCount+1),
                                 swap : 'false',
-                                containerClass: "card-2-mobile card-2-tablet card-7-desktop",
+                                containerClass: "card-2-mobile card-2-tablet card-7-desktop "~ cardLayoutInfo,
                                 timeSuppress: timeSuppress
                                 }) | raw}}
                                 {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -43,10 +49,7 @@
                         </div>
                         {% for i in 1..3 if articles[articleCount] %}
                             <div class="col-12 col-lg-4 left-border">
-                                {{this.render('../_single-article.twig', {
-                                article: articles[articleCount],
-                                position: (articleCount+1),
-                                imageSize: {width: 459, height: 278},
+                            {# imageSize: {width: 459, height: 278},
                                 imageSizes: {
                                     "mobile": {
                                         width: 550, height: 333
@@ -57,10 +60,13 @@
                                     "tablet": {
                                         width: 703, height: 425
                                     }
-                                },
+                                }, #}
+                                {{this.render(articleLayoutInfo, {
+                                article: articles[articleCount],
+                                position: (articleCount+1),
                                 swap : 'false',
                                 containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription
-                                card--verticalMulti card--verticalMulti-xs",
+                                card--verticalMulti card--verticalMulti-xs "~ cardLayoutInfo,
                                 timeSuppress: timeSuppress
                                 }) | raw}}
                                 {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -70,10 +76,7 @@
                 </div>
                 <div class="col-12 col-lg-3 card-borderBottom__deskVersion left-border">
                     {% for i in 4..6 if articles[articleCount] %}
-                        {{this.render('../_single-article.twig', {
-                        article: articles[articleCount],
-                        position: (articleCount+1),
-                        imageSize: {width: 120, height: 145},
+                    {# imageSize: {width: 120, height: 145},
                         imageSizes: {
                             "mobile": {
                                 width: 120, height: 145
@@ -84,9 +87,25 @@
                             "tablet": {
                                 width: 120, height: 145
                             }
-                        },
+                        }, #}
+                        {{this.render(articleLayoutInfo, {
+                        article: articles[articleCount],
+                        position: (articleCount+1),
                         swap : 'false',
-                        containerClass: "card-1-mobile card-1-tablet card-1-desktop",
+                        aspect_ratio:'3:4',
+                        imageSize: {width: 120},
+                        imageSizes: {
+                            "mobile": {
+                                width: 120
+                            },
+                            "mobileLrg": {
+                                width: 120
+                            },
+                            "tablet": {
+                                width: 120
+                            }
+                        },
+                        containerClass: "card-1-mobile card-1-tablet card-1-desktop "~ cardLayoutInfo,
                         timeSuppress: timeSuppress
                         }) | raw}}
                         {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
