--- a/partials/panels/section-08-ads.twig
+++ b/partials/panels/section-08-ads.twig
@@ -1,6 +1,12 @@
 {% set articleCount = 0 %}
 {% set cardIndex = 0 %}
 
+{% set cardLayoutInfo = '' %}
+{% set articleLayoutInfo = '../_single-article.twig' %}
+{% if cardLayout is defined and cardLayout is not empty and cardLayout == 'version2' %}
+    {% set cardLayoutInfo = 'card__version2' %}
+    {% set articleLayoutInfo = '../_single-article-v2.twig' %}
+{% endif %}
 
 <div class="row" data-section="08">
     <div class="col-12">
@@ -23,10 +29,7 @@
                 {% for i in 0..2 if articles[articleCount] %}
 
                 <div class="col-12 col-lg-3 left-border">
-                    {{this.render('../_single-article.twig', {
-                    article: articles[articleCount],
-                    position: (articleCount+1),
-                    imageSize: {width: 459, height: 278},
+                {# imageSize: {width: 459, height: 278},
                     imageSizes: {
                         "mobile": {
                             width: 550, height: 333
@@ -37,9 +40,12 @@
                         "tablet": {
                             width: 703, height: 425
                         }
-                    },
+                    }, #}
+                    {{this.render(articleLayoutInfo, {
+                    article: articles[articleCount],
+                    position: (articleCount+1),
                     swap : 'false',
-                    containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription",
+                    containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription "~ cardLayoutInfo,
                     timeSuppress: timeSuppress
                     }) | raw}}
                     {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -58,10 +64,7 @@
                 {% for i in 3..6 if articles[articleCount] %}
 
                 <div class="col-12 col-lg-3 left-border">
-                    {{this.render('../_single-article.twig', {
-                    article: articles[articleCount],
-                    position: (articleCount+1),
-                    imageSize: {width: 120, height: 145},
+                {# imageSize: {width: 120, height: 145},
                     imageSizes: {
                         "mobile": {
                             width: 120, height: 145
@@ -72,8 +75,25 @@
                         "tablet": {
                             width: 120, height: 145
                         }
+                    }, #}
+                    {{this.render(articleLayoutInfo, {
+                    article: articles[articleCount],
+                    position: (articleCount+1),
+                    swap : 'false',
+                    aspect_ratio:'3:4',
+                    imageSize: {width: 120},
+                    imageSizes: {
+                        "mobile": {
+                            width: 120
+                        },
+                        "mobileLrg": {
+                            width: 120
+                        },
+                        "tablet": {
+                            width: 120
+                        }
                     },
-                    containerClass: "card-1-mobile card-1-tablet card-1-desktop",
+                    containerClass: "card-1-mobile card-1-tablet card-1-desktop "~ cardLayoutInfo,
                     timeSuppress: timeSuppress
                     }) | raw}}
                     {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -88,10 +108,7 @@
                 <div class="row">
                     {% for i in 7..10 if articles[articleCount] %}
                     <div class="col-12 col-lg-3 left-border">
-                        {{this.render('../_single-article.twig', {
-                        article: articles[articleCount],
-                        position: (articleCount+1),
-                        imageSize: {width: 120, height: 145},
+                    {# imageSize: {width: 120, height: 145},
                         imageSizes: {
                             "mobile": {
                                 width: 120, height: 145
@@ -102,8 +119,25 @@
                             "tablet": {
                                 width: 120, height: 145
                             }
+                        }, #}
+                        {{this.render(articleLayoutInfo, {
+                        article: articles[articleCount],
+                        position: (articleCount+1),
+                        swap : 'false',
+                        aspect_ratio:'3:4',
+                        imageSize: {width: 120},
+                        imageSizes: {
+                            "mobile": {
+                                width: 120
+                            },
+                            "mobileLrg": {
+                                width: 120
+                            },
+                            "tablet": {
+                                width: 120
+                            }
                         },
-                        containerClass: "card-1-mobile card-1-tablet card-1-desktop",
+                        containerClass: "card-1-mobile card-1-tablet card-1-desktop "~ cardLayoutInfo,
                         timeSuppress: timeSuppress
                         }) | raw}}
                         {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
