--- a/partials/panels/section-11.twig
+++ b/partials/panels/section-11.twig
@@ -2,11 +2,18 @@
 {% set eventCount = 0 %}
 {% set cardIndex = 0 %}
 
+{% set cardLayoutInfo = '' %}
+{% set articleLayoutInfo = '../_single-article.twig' %}
+{% if cardLayout is defined and cardLayout is not empty and cardLayout == 'version2' %}
+    {% set cardLayoutInfo = 'card__version2' %}
+    {% set articleLayoutInfo = '../_single-article-v2.twig' %}
+{% endif %}
+
 {% set colorInverse = '' %}
-{% set inverseContainerClass = 'card-2-mobile card-2--noDescription card-2-tablet card-4-desktop' %}
+{% set inverseContainerClass = 'card-2-mobile card-2--noDescription card-2-tablet card-4-desktop '~ cardLayoutInfo %}
 {% if background is defined and background is not empty %}
 {% set colorInverse = 'inverse' %}
-{% set inverseContainerClass = 'card-2-mobile card-2--noDescription card-2-tablet card-4-desktop c-cards--inverse' %}
+{% set inverseContainerClass = 'card-2-mobile card-2--noDescription card-2-tablet card-4-desktop c-cards--inverse '~ cardLayoutInfo %}
 {% endif %}
 <div class="row" data-section="01">
     <div class="col-12">
@@ -23,10 +30,8 @@
     {% for i in 0..2 if articles[articleCount] %}
 
     <div class="col-12 col-lg-3">
-        {{this.render('../_single-article.twig', {
-        article: articles[articleCount],
-        position: (articleCount+1),
-        imageSize: {width: 459, height: 278},
+    
+        {# imageSize: {width: 459, height: 278},
         imageSizes: {
             "mobile": {
                 width: 550, height: 333
@@ -37,7 +42,10 @@
             "tablet": {
                 width: 703, height: 425
             }
-        },
+        }, #}
+        {{this.render(articleLayoutInfo, {
+        article: articles[articleCount],
+        position: (articleCount+1),
         swap : 'false',
         containerClass: inverseContainerClass,
         timeSuppress: timeSuppress
