--- a/partials/panels/section-13.twig
+++ b/partials/panels/section-13.twig
@@ -2,11 +2,19 @@
 {% set eventCount = 0 %}
 {% set cardIndex = 0 %}
 
+{% set cardLayoutInfo = '' %}
+{% set articleLayoutInfo = '../_single-article.twig' %}
+{% if cardLayout is defined and cardLayout is not empty and cardLayout == 'version2' %}
+    {% set cardLayoutInfo = 'card__version2' %}
+    {% set articleLayoutInfo = '../_single-article-v2.twig' %}
+{% endif %}
+
+
 {% set colorInverse = '' %}
-{% set inverseContainerClass = 'card-property-mobile card-property-tablet card-property-desktop' %}
+{% set inverseContainerClass = 'card-property-mobile card-property-tablet card-property-desktop '~ cardLayoutInfo %}
 {% if background is defined and background is not empty %}
 {% set colorInverse = 'inverse' %}
-{% set inverseContainerClass = 'card-property-mobile card-property-tablet card-property-desktop c-cards--inverse' %}
+{% set inverseContainerClass = 'card-property-mobile card-property-tablet card-property-desktop c-cards--inverse '~ cardLayoutInfo %}
 {% endif %}
 <div class="row" data-section="13">
     <div class="col-12">
@@ -23,10 +31,8 @@
     {% for i in 0..3 if articles[articleCount] %}
 
     <div class="col-12 col-lg-3">
-        {{this.render('../_single-article.twig', {
-        article: articles[articleCount],
-        position: (articleCount+1),
-        imageSize: {width: 459, height: 278},
+    
+        {# imageSize: {width: 459, height: 278},
         imageSizes: {
             "mobile": {
                 width: 550, height: 333
@@ -37,7 +43,10 @@
             "tablet": {
                 width: 703, height: 425
             }
-        },
+        }, #}
+        {{this.render(articleLayoutInfo, {
+        article: articles[articleCount],
+        position: (articleCount+1),
         swap : 'false',
         containerClass: inverseContainerClass,
         template: 'property',
