--- a/partials/panels/section-15.twig
+++ b/partials/panels/section-15.twig
@@ -1,6 +1,12 @@
 {% set articleCount = 0 %}
 {% set cardIndex = 0 %}
 
+{% set cardLayoutInfo = '' %}
+{% set articleLayoutInfo = '../_single-article.twig' %}
+{% if cardLayout is defined and cardLayout is not empty and cardLayout == 'version2' %}
+    {% set cardLayoutInfo = 'card__version2' %}
+    {% set articleLayoutInfo = '../_single-article-v2.twig' %}
+{% endif %}
 
 <div class="row" data-section="15">
 	<div class="col-12">
@@ -16,10 +22,8 @@
     {% for i in 0..3 if articles[articleCount] %}
 
     <div class="col-12 col-lg-3">
-        {{this.render('../_single-article.twig', {
-        article: articles[articleCount],
-        position: (articleCount+1),
-        imageSize: {width: 459, height: 278},
+    
+        {# imageSize: {width: 459, height: 278},
         imageSizes: {
             "mobile": {
                 width: 550, height: 333
@@ -30,9 +34,13 @@
             "tablet": {
                 width: 703, height: 425
             }
-        },
+        }, #}
+
+        {{this.render(articleLayoutInfo, {
+        article: articles[articleCount],
+        position: (articleCount+1),
         swap : 'false',
-        containerClass: 'card-2-mobile card-2--noDescription card-2--noUserInfo card-2-tablet card-4-desktop',
+        containerClass: 'card-2-mobile card-2--noDescription card-2--noUserInfo card-2-tablet card-4-desktop '~ cardLayoutInfo,
         timeSuppress: timeSuppress
         }) | raw}}
         {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
