--- a/partials/_article_admin.twig
+++ b/partials/_article_admin.twig
@@ -63,6 +63,7 @@
                 data-social     = "{{type}}" 
                 data-id         = "{{id}}" 
                 title           = "{{pinTitle}}" 
+                data-blogguid   = "{{blogguid}}"
                 class           = "btnhide social-tooltip PinArticleBtn {{pinClass}}" 
                 type            = "button" 
                 data-status     = "{{isPinned}}">
