--- a/partials/panels/section-00.twig
+++ b/partials/panels/section-00.twig
@@ -11,6 +11,7 @@
                     {{this.render('../_single-article.twig', {
                         article: articles[articleCount],
                         position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
                         imageSize: {width: 459, height: 278},
                         imageSizes: {
                             "mobile": {
@@ -39,6 +40,7 @@
                         {{this.render('../_single-article.twig', {
                             article: articles[articleCount],
                             position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
                             imageSize: {width: 459, height: 278},
                             imageSizes: {
                                 "mobile": {
@@ -63,6 +65,7 @@
                         {{this.render('../_single-article.twig', {
                             article: articles[articleCount],
                             position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
                             imageSize: {width: 950, height: 675},
                             imageSizes: {
                                 "mobile": {
@@ -87,6 +90,7 @@
                         {{this.render('../_single-article.twig', {
                             article: articles[articleCount],
                             position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
                             imageSize: {width: 459, height: 278},
                             imageSizes: {
                                 "mobile": {
@@ -122,6 +126,7 @@
                         {{this.render('../_single-article.twig', {
                             article: articles[articleCount],
                             position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
                             imageSize: {width: 459, height: 278},
                             imageSizes: {
                                 "mobile": {
