--- a/partials/panels/section-08.twig
+++ b/partials/panels/section-08.twig
@@ -26,6 +26,7 @@
                     {{this.render('../_single-article.twig', {
                     article: articles[articleCount],
                     position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
                     imageSize: {width: 459, height: 278},
                     imageSizes: {
                         "mobile": {
@@ -55,6 +56,7 @@
                     {{this.render('../_single-article.twig', {
                     article: articles[articleCount],
                     position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
                     imageSize: {width: 120, height: 145},
                     imageSizes: {
                         "mobile": {
@@ -85,6 +87,7 @@
                         {{this.render('../_single-article.twig', {
                         article: articles[articleCount],
                         position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
                         imageSize: {width: 120, height: 145},
                         imageSizes: {
                             "mobile": {
@@ -116,6 +119,7 @@
                         {{this.render('../_single-article.twig', {
                         article: articles[articleCount],
                         position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
                         imageSize: {width: 120, height: 145},
                         imageSizes: {
                             "mobile": {
