--- a/partials/panels/section-02.twig
+++ b/partials/panels/section-02.twig
@@ -24,6 +24,7 @@
                     {{this.render('../_single-article.twig', {
                     article: articles[articleCount],
                     position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
                     imageSize: {width: 459, height: 278},
                     imageSizes: {
                         "mobile": {
@@ -48,6 +49,7 @@
                     {{this.render('../_single-article.twig', {
                     article: articles[articleCount],
                     position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
                     imageSize: {width: 950, height: 675},
                     imageSizes: {
                         "mobile": {
@@ -71,6 +73,7 @@
                     {{this.render('../_single-article.twig', {
                     article: articles[articleCount],
                     position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
                     imageSize: {width: 459, height: 278},
                     imageSizes: {
                         "mobile": {
