--- a/partials/panels/section-07.twig
+++ b/partials/panels/section-07.twig
@@ -25,6 +25,7 @@
                                 {{this.render('../_single-article.twig', {
                                 article: articles[articleCount],
                                 position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
                                 imageSize: {width: 950, height: 675},
                                 imageSizes: {
                                     "mobile": {
@@ -46,6 +47,7 @@
                                 {{this.render('../_single-article.twig', {
                                 article: articles[articleCount],
                                 position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
                                 imageSize: {width: 459, height: 278},
                                 imageSizes: {
                                     "mobile": {
@@ -73,6 +75,7 @@
                         {{this.render('../_single-article.twig', {
                         article: articles[articleCount],
                         position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
                         imageSize: {width: 120, height: 145},
                         imageSizes: {
                             "mobile": {
