--- a/partials/panels/section-09.twig
+++ b/partials/panels/section-09.twig
@@ -20,6 +20,7 @@
          {{this.render('../_single-article.twig', {
             article: articles[articleCount], 
             position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
             containerClass: "card-8-mobile card-8-tablet card-8-desktop",
             imageSize: {width: 95, height: 130},
             imageSizes: {
@@ -42,6 +43,7 @@
          {{this.render('../_single-article.twig', {
             article: articles[articleCount], 
             position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
             containerClass: "card-8-mobile card-8-tablet card-8-desktop",
             imageSize: {width: 95, height: 130},
             imageSizes: {
@@ -64,6 +66,7 @@
          {{this.render('../_single-article.twig', {
             article: articles[articleCount], 
             position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
             containerClass: "card-8-mobile card-8-tablet card-8-desktop",
             imageSize: {width: 95, height: 130},
             imageSizes: {
@@ -88,6 +91,7 @@
          {{this.render('../_single-article.twig', {
             article: articles[articleCount], 
             position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
             containerClass: "card-8-mobile card-8-tablet card-8-desktop",
             imageSize: {width: 95, height: 130},
             imageSizes: {
@@ -110,6 +114,7 @@
          {{this.render('../_single-article.twig', {
             article: articles[articleCount], 
             position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
             containerClass: "card-8-mobile card-8-tablet card-8-desktop",
             imageSize: {width: 95, height: 130},
             imageSizes: {
@@ -132,6 +137,7 @@
          {{this.render('../_single-article.twig', {
             article: articles[articleCount], 
             position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
             containerClass: "card-8-mobile card-8-tablet card-8-desktop",
             imageSize: {width: 95, height: 130},
             imageSizes: {
