--- a/partials/panels/section-13.twig
+++ b/partials/panels/section-13.twig
@@ -26,6 +26,7 @@
         {{this.render('../_single-article.twig', {
         article: articles[articleCount],
         position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
         imageSize: {width: 459, height: 278},
         imageSizes: {
             "mobile": {
