--- a/partials/panels/section-business-classified-panel.twig
+++ b/partials/panels/section-business-classified-panel.twig
@@ -34,6 +34,7 @@
             {{this.render('../_single-article.twig', {
                 article: articles[articleCount], 
                 position: (articleCount+1),
+feedBlogGuid: articles[articleCount]['requestedBlog']['guid'],
                 cardType: "acme-",
                 imageSize: {width: 285, height: 192},
                 imageSizes: {
