--- a/static/sass/cards/_acme-card-2.scss
+++ b/static/sass/cards/_acme-card-2.scss
@@ -3,6 +3,10 @@
 
     .acme-c-cards-view {
         @include box-shadow(0 2px 10px 6px rgba(0, 0, 0, 0.2));
+        
+        .click_here_btn {
+            display: inline-flex !important;
+        }
 
         &__media {
             @include size(100px);
