--- a/partials/_article-main.twig
+++ b/partials/_article-main.twig
@@ -77,6 +77,7 @@
                 <div class="classified_contactInfo">{{params.additionalInfo.contactemail}}</div>
             </div>
         {% endif %}
+        <p class="u-loadmore-button click_here_btn mt-2">Click here</p>
     </div>
     <div class="{{params.cardType}}c-cards-view__author {{params.videoClass}}">
         <div class="{{params.cardType}}c-cards-view__author-name">{{ params.author }}</div>
