--- a/static/sass/cards/_card.scss
+++ b/static/sass/cards/_card.scss
@@ -240,6 +240,9 @@
                 }
             }
         }
+        .click_here_btn {
+            display: none !important;
+        }
     }
 
     &--inverse {
